--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./src/js/practice.js"></script>
+    
     <title>Console Management</title>
 </head>
 <body>
     
+
+
+
+    <script src="./src/js/exercise5.js"></script>
 </body>
 </html>
