--- a/02_ManejoDeStrings/index.html
+++ b/02_ManejoDeStrings/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Console Management</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <script src="./src/js/main.js"></script>
+    <script src="./src/js/js_index.js"></script>
 </body>
 </html>
