--- a/03_manejoDeNumeros/index.html
+++ b/03_manejoDeNumeros/index.html
@@ -6,6 +6,6 @@
     <title>Numeros en JS</title>
 </head>
 <body>
-    <script src="./src/js/jsIndex.js"></script>
+    <script src="./src/js/ejercicios.js"></script>
 </body>
 </html>
