--- a/04_manejoDeOperadores/index.html
+++ b/04_manejoDeOperadores/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./src/js/index_js.js"></script>
+    <script src="./src/js/ejercicios.js"></script>
 </body>
 </html>
