--- a/05_estructuraDeControlParte1/index.html
+++ b/05_estructuraDeControlParte1/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./src/js/indexJs.js"></script>
+    <script src="./src/js/ejercios.js"></script>
 </body>
 </html>
